Salesforce/objects/agf__ADM_Work_Manager_User_Preferences__c.object
<CustomObject>
    <fields>
        <fullName>agf__Columns__c</fullName>
        <label>Columns</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Filters__c</fullName>
        <label>Filters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Reorder_Field__c</fullName>
        <label>Reorder Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Show_Velocity_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Velocity Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Sort_Column__c</fullName>
        <label>Sort Column</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Sort_Direction__c</fullName>
        <label>Sort Direction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>asc</fullName>
                    <default>true</default>
                    <label>asc</label>
                </value>
                <value>
                    <fullName>desc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Sort_Field__c</fullName>
        <label>Sort Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Team__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Team</label>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipName>Work_Manager_User_Settings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Manager_User_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Velocity_Line_Limit__c</fullName>
        <label>Velocity Line Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__View_Type__c</fullName>
        <description>i.e. &quot;backlog&quot;, &quot;sprint&quot;.</description>
        <label>View Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Visible_Columns__c</fullName>
        <label>Visible Columns</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Work Manager User Preferences</label>
    <nameField>
        <label>Work Manager User Preferences</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Manager User Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>